--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,11 +14,15 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
     "framer-motion": "^11.0.5",
     "next": "14.1.0",
+    "next-redux-wrapper": "^8.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-redux": "^9.1.0",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
